# ubuntu-namer

./: .gitignore  BUILDING.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  dependabot_automerge.yml  publish.yml
docker/: README.md
tests/: test_namer.py
tests/test_example/: test_hello.py  test_namer.py
ubuntu_namer/: __init__.py  __main__.py  main.py
