[project]
name = "ubuntu-namer"
version = "1.0.0"
description = "Generate random Ubuntu-style codenames like Agile Amoeba"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Richard Decal" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.0",
]

[project.scripts]
"ubuntu-namer" = "ubuntu_namer.__main__:app"

[project.urls]
Homepage = "https://github.com/crypdick/ubuntu-namer"
Repository = "https://github.com/crypdick/ubuntu-namer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
